# cli

./: CMakeLists.txt  README.md  cli.c  cli.h
app/: app.h
flag/: flag.h
help/: generator.h
shared/: str_cmp_fn.h
type/: type.h
value/: value.h
